test/Dialect/ZKIR/structs_fail_06.zkir
// RUN: zkir-opt %s --split-input-file --verify-diagnostics

zkir.struct @ComponentD<[@B, @D, @C]> {
  func.func public @compute() {
    return
  }
// expected-error@+1 {{'builtin.module' op invalid operation in 'struct'; only 'field' and 'func' operations are permitted}}
  builtin.module {
  }
}
